# 2026seoul-bigdata

./: .gitignore  conclusion.html  conclusion_kim.html  index.html  introduce_kim.html  main_kim.html
Bokji/: PR_description.md  README.md  analysis.py  analysis_v2.py  compute_tobler_v4.py  extract_gu_scores_v4.py  generate_conclusion_v4.py  generate_dashboard_v3.py  generate_dashboard_v4.py  instruction.md  visualize_dong.py  visualize_parks.py  visualize_welfare.py  고령자현황_20260421103806.csv  서울시 사회복지시설(노인여가복지시설) 목록.csv  서울시 주요 공원현황(2026 상반기).xlsx
Bokji/output/: district_welfare_analysis.csv  (+9 more)
YOO/: README.md  analysis_extra.ipynb  bus_route.ipynb  card_trips.ipynb  crosswalk_safety.ipynb  crosswalk_safety_map.html  data_ingestion.ipynb  kakao_geocode.ipynb  kakao_map.html  prototype.ipynb  pyproject.toml  route_station.ipynb  seoul_elderly_dashboard.html  seoul_elderly_map.html  seoul_elderly_od_flow.html  seoul_elderly_viz.ipynb  sido.ipynb  transfer_accessibility.ipynb  trip_volume.ipynb  urban_railway.ipynb  urban_railway_station.ipynb  서울특별시_동작구_횡단보도_20260306.csv
YOO/data/processed/: taas_seoul_elderly_pedestrian_2024.csv
docs/: 1-3 행정안전부 코드와 국가데이터처 코드 연계표.xlsx  260418_brief.md  260425지시서.md  260503_infra_OSM전환_설계.md  260503_todo.md  프로젝트_종합.md
medical_LEE/: 260425_지시서.md  README.md  output_detail.md  requirements.txt
outputs-YANG/: index.html
references/: BIGPLANETMADE.html
topic-exploration/: project_plan_v5.md
롯데이노베이트_목차세팅_files/: 2117-5727518038429a5f.js  2789-f33ef6c0a731dde3.js  ae80c901163877c4.css  anchor.html  webpack-f0d5a5194b7ba181.js
(+110 files in other folders)
