[project]
name = "prototype-seoul"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.2",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
]
